--- a/notebook/experiments.ipynb
+++ b/notebook/experiments.ipynb
@@ -1854,6 +1854,91 @@
    "execution_count": null,
    "id": "f0ecdd5e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CWD set to D:\\Agentic_AI\\Practice\\DOCUMENT_PORTAL_1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{\"available_keys\": [\"GOOGLE_API_KEY\", \"OPENAI_API_KEY\", \"GROQ_API_KEY\"], \"timestamp\": \"2025-11-21T23:56:30.611990Z\", \"level\": \"info\", \"event\": \"Environment variables validated\"}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'faiss_db': {'collection_name': 'document_portal'}, 'embedding_model': {'provider': 'google', 'model_name': 'models/text-embedding-004'}, 'retriever': {'top_k': 10}, 'llm': {'groq': {'provider': 'groq', 'model_name': 'llama-3.3-70b-versatile', 'temperature': 0, 'max_output_tokens': 2048}, 'google': {'provider': 'google', 'model_name': 'gemini-2.0-flash', 'temperature': 0, 'max_output_tokens': 2048}}}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{\"config_keys\": [\"faiss_db\", \"embedding_model\", \"retriever\", \"llm\"], \"timestamp\": \"2025-11-21T23:56:30.623010Z\", \"level\": \"info\", \"event\": \"Configuration loaded successfully\"}\n",
+      "{\"provider\": \"groq\", \"model_name\": \"llama-3.3-70b-versatile\", \"temperature\": 0, \"max_tokens\": 2048, \"timestamp\": \"2025-11-21T23:56:30.630119Z\", \"level\": \"info\", \"event\": \"Loading LLM\"}\n",
+      "HTTP Request: POST https://api.groq.com/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens Used: 71\n",
+      "\tPrompt Tokens: 39\n",
+      "\t\tPrompt Tokens Cached: 0\n",
+      "\tCompletion Tokens: 32\n",
+      "\t\tReasoning Tokens: 0\n",
+      "Successful Requests: 1\n",
+      "Total Cost (USD): $0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This code snippet gives you the number of tokens and the cost \n",
+    "\n",
+    "# This import gets CWD as the path to get config.yaml path \n",
+    "# otherwise moduleloader will throw error\n",
+    "import os\n",
+    "os.chdir(r\"D:\\Agentic_AI\\Practice\\DOCUMENT_PORTAL_1\")\n",
+    "print(\"CWD set to\", os.getcwd())\n",
+    "\n",
+    "from utils.model_loader import ModelLoader\n",
+    "loader = ModelLoader()\n",
+    "llm = loader.load_llm()\n",
+    "\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "with get_openai_callback() as cb:\n",
+    "    result = llm.invoke(\"Tell me a joke\")\n",
+    "    print(cb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71f63689",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CWD set to D:\\Agentic_AI\\Practice\\DOCUMENT_PORTAL_1\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e15adcca",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
