Fix file path handling in data ingestion and retrieval; update test output for clarity

--- a/notebook/experiments.ipynb
+++ b/notebook/experiments.ipynb
@@ -1936,8 +1936,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e15adcca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File does not exist: data\\multi_doc_chat\\market_analysis_report.docx\n",
+      "File does not exist: data\\multi_doc_chat\\NIPS-2017-attention-is-all-you-need-Paper.pdf\n",
+      "File does not exist: data\\multi_doc_chat\\sample.pdf\n",
+      "File does not exist: data\\multi_doc_chat\\state_of_the_union.txt\n",
+      "uploaded_files:  []\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "test_files = [\n",
+    "            \"data\\\\multi_doc_chat\\\\market_analysis_report.docx\",\n",
+    "            \"data\\\\multi_doc_chat\\\\NIPS-2017-attention-is-all-you-need-Paper.pdf\",\n",
+    "            \"data\\\\multi_doc_chat\\\\sample.pdf\",\n",
+    "            \"data\\\\multi_doc_chat\\\\state_of_the_union.txt\"\n",
+    "        ]\n",
+    "\n",
+    "uploaded_files = []\n",
+    "for file_path in test_files:\n",
+    "    if Path(file_path).exists():\n",
+    "        uploaded_files.append(open(file_path, \"rb\"))\n",
+    "    else:\n",
+    "        print(f\"File does not exist: {file_path}\")\n",
+    "\n",
+    "print(\"uploaded_files: \", uploaded_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83814330",
    "metadata": {},
    "outputs": [],
    "source": []
