--- a/notebook/experiments.ipynb
+++ b/notebook/experiments.ipynb
@@ -1634,12 +1634,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "4fa128f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Document_Portal_1_env (Python -1.-1.-1)' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
+     ]
+    }
+   ],
    "source": [
-    "from langchain.prompts import PromptTemplate"
+    "from langchain_core.prompts import PromptTemplate"
    ]
   },
   {
@@ -1936,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e15adcca",
    "metadata": {},
    "outputs": [
@@ -1944,10 +1953,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File does not exist: data\\multi_doc_chat\\market_analysis_report.docx\n",
-      "File does not exist: data\\multi_doc_chat\\NIPS-2017-attention-is-all-you-need-Paper.pdf\n",
-      "File does not exist: data\\multi_doc_chat\\sample.pdf\n",
-      "File does not exist: data\\multi_doc_chat\\state_of_the_union.txt\n",
+      "File does not exist: data\\multi_document_chat\\market_analysis_report.docx\n",
       "uploaded_files:  []\n"
      ]
     }
@@ -1955,10 +1961,10 @@
    "source": [
     "from pathlib import Path\n",
     "test_files = [\n",
-    "            \"data\\\\multi_doc_chat\\\\market_analysis_report.docx\",\n",
-    "            \"data\\\\multi_doc_chat\\\\NIPS-2017-attention-is-all-you-need-Paper.pdf\",\n",
-    "            \"data\\\\multi_doc_chat\\\\sample.pdf\",\n",
-    "            \"data\\\\multi_doc_chat\\\\state_of_the_union.txt\"\n",
+    "            \"data\\multi_document_chat\\market_analysis_report.docx\",\n",
+    "            # \"data\\\\multi_document_chat\\\\NIPS-2017-attention-is-all-you-need-Paper.pdf\",\n",
+    "            # \"data\\\\multi_document_chat\\\\sample.pdf\",\n",
+    "            # \"data\\\\multi_document_chat\\\\state_of_the_union.txt\"\n",
     "        ]\n",
     "\n",
     "uploaded_files = []\n",
@@ -1973,8 +1979,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "83814330",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current working dir: d:\\Agentic_AI\\Practice\\DOCUMENT_PORTAL_1\\notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "print(\"Current working dir:\", Path.cwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3f63a1a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1996,7 +2022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "-1.-1.-1"
   }
  },
  "nbformat": 4,
